...
            isLoading
                ? const SizedBox(
                  height: 20,
                  width: 20,
                  child: CircularProgressIndicator(strokeWidth: 2),
                )
                : Text(workout == null ? 'Save Workout' : 'Update Workout'),
      ),
    );
  }

  Future<void> _saveWorkout(BuildContext context, WidgetRef ref) async {
    final name = nameController.text.trim();
...
